<resources>
    <string name="app_name">PFTFinalProjectv1</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="submit">Submit</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="back_to_login">Back to login</string>
    <string name="create_new_account">Create new account</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="warehouse_inventory">Warehouse Inventory</string>
    <string name="latest_inventory">Latest inventory</string>
    <string name="view_details">View Details</string>
    <string name="toy_racers_cars">Toy Racers Cars</string>
    <string name="_9_99">$9.99</string>
    <string name="_200">200</string>
    <string name="view_details2">View Details</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="name3">Name</string>
    <string name="item">Item</string>
    <string name="price2">Price</string>
    <string name="quantity2">Quantity</string>
    <string name="view_details3">View Details</string>
    <string name="_23">23</string>
    <string name="toy_race_car">Toy Race Car</string>
    <string name="_12_99">$12.99</string>
    <string name="barbie_doll">Barbie Doll</string>
    <string name="_15_00">$15.00</string>
    <string name="_37">37</string>
    <string name="_50_00">$50.00</string>
    <string name="_62">62</string>
    <string name="where_s_waldo">Where\'s Waldo</string>
    <string name="_6_00">$6.00</string>
    <string name="_47">47</string>
    <string name="kid_s_golf_set">Kid\'s Golf Set</string>
    <string name="_52_00">$52.00</string>
    <string name="_53">53</string>
    <string name="yo_yo">Yo-yo</string>
    <string name="_3_00">$3.00</string>
    <string name="_17">17</string>
    <string name="view_more">View More</string>
    <string name="view_more_items3">View More Items</string>
    <string name="employee_id">Employee Id</string>
    <string name="sign_in">Sign In</string>
    <string name="password2">Password</string>
    <string name="enter_employee_id">Enter employee id</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="back_to_login2">Back to login</string>
    <string name="create_account">Create account</string>
    <string name="full_name">Full name</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="create_password">Create Password</string>
    <string name="password3">Password</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="email2">Email</string>
    <string name="enter_email4">Enter email</string>
    <string name="edit_delete">Edit | Delete</string>
    <string name="edit_delete1">Edit | Delete</string>
    <string name="edit_delete2">Edit | Delete</string>
    <string name="edit_delete3">Edit | Delete</string>
    <string name="edit_delete4">Edit | Delete</string>
    <string name="edit_delete5">Edit | Delete</string>
    <string name="add_item">Add Item +</string>
    <string name="view_more5">View More</string>
    <string name="create_item">Create Item</string>
    <string name="back_to_all_inventory">Back to all inventory</string>
    <string name="item_name">Item Name</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="item_description">Item Description</string>
    <string name="item_category">Item Category</string>
    <string name="item_status">Item Status</string>
    <string name="item_price">Item Price</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="item_quantity2">Item Quantity</string>
    <string name="enter_item_quantity">Enter Item Quantity</string>
    <string name="item_description9">Item Description</string>
    <string name="enter_item_description">Enter Item Description</string>
    <string name="item_category9">Item Category</string>
    <string name="enter_item_category">Enter Item Category</string>
    <string name="item_status9">Item Status</string>
    <string name="item_enter_status">Item Enter Status</string>
    <string name="enter_item_price">Enter Item Price</string>
    <string name="item_price9">Item Price</string>
    <string name="back_to_home">Back to home</string>
    <string name="employee_email">Employee Email</string>
    <string name="sms_text">This application needs to use telephony features and needs the permission to send this device text messages.You will receive alerts on application updates and changes. As well as changes to inventory states.</string>
    <string name="employee_phone">Employee Phone</string>
    <string name="enter_device_phone_number">Enter Device Phone Number</string>
    <string name="log_out">Log out</string>
    <string name="disclaimer_text">This mobile application needs to use telephony features and requires permission to send alert messages to this device. You will receive alerts for low inventory, upcoming events, or reaching a goal weight. If you deny access to the permissions needed for the app to interact with SMS, the app will continue to function overall but will not provide any notifications.</string>
    <string name="delete_item">Delete Item</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="send_sms">Send SMS</string>
    <string name="_5554">5554</string>
</resources>