<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan"
    android:padding="16dp"
    tools:context=".CreateAccountActivity">


    <TextView
        android:id="@+id/warehouseInventoryText"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:text="@string/warehouse_inventory"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/employee_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_id"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password3"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />

    <TextView
        android:id="@+id/enter_e_mail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email2"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <EditText
        android:id="@+id/enter_password_text"
        android:layout_width="370dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:labelFor="@id/enter_password_text"
        android:minHeight="48dp"
        android:padding="8dp"
        android:text="@string/enter_password"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69"/>

    <TextView
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />


    <EditText
        android:id="@+id/enter_full_name_text"
        android:layout_width="373dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_your_full_name"
        android:inputType="text"
        android:labelFor="@id/enter_full_name_text"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33"
        tools:ignore="MissingConstraints,DuplicateClickableBoundsCheck" />

    <EditText
        android:id="@+id/enter_employee_id_text"
        android:layout_width="373dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_employee_id"
        android:inputType="text"
        android:labelFor="@id/enter_employee_id_text"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        tools:ignore="MissingConstraints,DuplicateClickableBoundsCheck" />


    <EditText
        android:id="@+id/enter_e_mail"
        android:layout_width="373dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="text"
        android:labelFor="@id/enter_full_name_text"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        tools:ignore="MissingConstraints,DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/create_account_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/seaBlue"
        android:text="@string/create_account"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        android:onClick="createAccountBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/go_home_screen_button"
        android:layout_width="136dp"
        android:layout_height="36dp"
        android:padding="8dp"
        android:text="@string/back_to_login2"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        />

</androidx.constraintlayout.widget.ConstraintLayout>